# mattergen

./: .gitignore  CONTRIBUTING.md  MODEL_CARD.md  NOTICE  README.md  pyproject.toml  pyproject_apple_silicon.toml
.azure/: component_detection.yml
.github/workflows/: component_detection.yml
benchmark/: plot_benchmark_results.ipynb
benchmark/metrics/: cdvae.json  diffcsp_mp_20.json  ftcp.json  g_schnet.json  mattergen.json  mattergen_mp_20.json  p_g_schnet.json
checkpoints/: .gitattributes
checkpoints/chemical_system/: config.yaml
checkpoints/chemical_system/checkpoints/: last.ckpt
checkpoints/chemical_system_energy_above_hull/: config.yaml
checkpoints/chemical_system_energy_above_hull/checkpoints/: last.ckpt
checkpoints/dft_band_gap/: config.yaml
checkpoints/dft_band_gap/checkpoints/: last.ckpt
checkpoints/dft_mag_density/: config.yaml
checkpoints/dft_mag_density/checkpoints/: last.ckpt
checkpoints/dft_mag_density_hhi_score/: config.yaml
checkpoints/dft_mag_density_hhi_score/checkpoints/: last.ckpt
checkpoints/mattergen_base/: config.yaml
checkpoints/mattergen_base/checkpoints/: .gitattributes  last.ckpt
checkpoints/ml_bulk_modulus/: config.yaml
checkpoints/ml_bulk_modulus/checkpoints/: last.ckpt
checkpoints/space_group/: config.yaml
checkpoints/space_group/checkpoints/: last.ckpt
data-release/: README.md
data-release/alex-mp/: .gitattributes  README.md
data-release/cifs/: README.md
data-release/cifs/chemsys/: Sr2VO4.cif  Sr2VO4_symmetrized.cif  Sr3V2O8.cif  Sr3V2O8_symmetrized.cif  SrV2O4.cif  SrV2O4_symmetrized.cif  SrV2O6.cif  SrV2O6_symmetrized.cif
data-release/cifs/experimental/: Ta0.66666667Cr1.33333333O4_symmetrized.cif
data-release/cifs/joint_mag_hhi/: Fe8Au.cif  Fe8Au_symmetrized.cif  MgMn4Fe3O8.cif  MgMn4Fe3O8_symmetrized.cif  Mn2Fe3O5.cif  Mn2Fe3O5_symmetrized.cif
data-release/cifs/symmetry/: CsMgIn9_symmetrized.cif  Cu4P3O11_symmetrized.cif  FeIrOsRh.cif  FeIrOsRh_symmetrized.cif  Li(SnCl3)2_symmetrized.cif  LiHoZrRh.cif  LiHoZrRh_symmetrized.cif  Mn6O5F7_symmetrized.cif  MnSn2F6_symmetrized.cif  RbCu4Ag3F12.cif  RbCu4Ag3F12_symmetrized.cif  Zn2Sn3.cif  Zn2Sn3_symmetrized.cif
data-release/mp-20/: .gitattributes  README.md
data-release/nanoindentation_measurements/: depth_load_measurements_TaCr2O6.csv
data-release/xps_measurements/: C1s Scan.VGD  Cr2p Scan.VGD  CrLM2 Scan.VGD  O1s Scan.VGD  OKL1 Scan.VGD  Ta4f Scan.VGD  TaNO1 Scan.VGD  Valence.VGD  XPS Survey.VGD
data-release/xrd_measurements/: Rietveld_refinment_TaCr2O6.pcr
datasets/: .gitattributes
lisa/: README.md  conv_results.ipynb  requirements.txt  run_permutations.sh
lisa/db/: README.md  models.py  parser.py
lisa/db_alembic/: .env.example  alembic.ini  models.py
lisa/db_alembic/alembic/: env.py
lisa/db_mongo/: .env.example  README.md  mongo.py  parser.py
lisa/db_mongo/fastapi/: main.py
lisa/db_mongo/utils/: mattersim.py  parser.py
lisa/mattergen-app/: .env  .env.example  README.md  docker-compose.yml  requirements.txt
lisa/mattergen-app/backend/: .env  .env.example  Dockerfile  cleanup.sh  database.py  deps.py  logging_config.py  main.py  requirements.txt
lisa/mattergen-app/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
lisa/results/base/: generated_crystals.extxyz
lisa/results/chemical_system_energy_above_hull/: generated_crystals.extxyz  metrics.json
lisa/results/dft_mag_density_1.20_3/: fe.xyz  generated_crystals.extxyz  metrics.json
lisa/utils/: extxyz_processor.py  visualisation.py
mattergen/: __init__.py  adapter.py  denoiser.py  generator.py  property_embeddings.py
mattergen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mattergen/common/: __init__.py  globals.py  loss.py
mattergen/common/data/: callback.py  chemgraph.py  collate.py  condition_factory.py  datamodule.py  dataset.py  dataset_transform.py  num_atoms_distribution.py  transform.py  types.py
mattergen/common/diffusion/: corruption.py  predictors_correctors.py
mattergen/common/embeddings/: __init__.py  continuous_embeddings.py
mattergen/common/gemnet/: cgmanifest.json  gemnet.py  gemnet_ctrl.py  initializers.py  utils.py
mattergen/common/tests/: data_utils_test.py  gemnet_test.py  mp_20_debug_batch.pt  testutils.py
mattergen/common/utils/: config_utils.py  data_classes.py  data_utils.py  eval_utils.py  globals.py  lattice_score.py  ocp_graph_utils.py  readout.py
mattergen/conf/: csp.yaml  default.yaml
mattergen/conf/adapter/: default.yaml
mattergen/conf/data_module/: alex_mp_20.yaml  mp_20.yaml
mattergen/conf/lightning_module/: default.yaml
mattergen/conf/trainer/: default.yaml
mattergen/diffusion/: cgmanifest.json  config.py  diffusion_module.py  discrete_time.py  exceptions.py  lightning_module.py  losses.py  model_target.py  model_utils.py  run.py  timestep_samplers.py
mattergen/diffusion/corruption/: corruption.py  d3pm_corruption.py  multi_corruption.py  sde_lib.py
mattergen/diffusion/d3pm/: cgmanifest.json  d3pm.py  d3pm_predictors_correctors.py
mattergen/diffusion/data/: batched_data.py
mattergen/diffusion/sampling/: classifier_free_guidance.py  pc_partials.py  pc_sampler.py  predictors.py  predictors_correctors.py
mattergen/diffusion/score_models/: base.py
mattergen/diffusion/tests/: conftest.py  test_d3pm.py  test_data_utils.py  test_losses.py  test_model_utils.py  test_multi_corruption.py  test_reverse_sampling.py  test_sampling.py  test_sde_lib.py  test_wrapped_normal.py
mattergen/diffusion/training/: field_loss.py  metrics.py  utils.py
mattergen/diffusion/wrapped/: wrapped_normal_loss.py  wrapped_predictors_correctors.py  wrapped_sde.py
mattergen/evaluation/: evaluate.py
mattergen/evaluation/metrics/: core.py  (+4 more)
mattergen/scripts/: evaluate.py  finetune.py  generate.py
mattergen/tests/: test_diffusion_instantiation.py  test_generator.py  test_mattergen_denoiser.py  test_sde_lib.py  test_structure_matcher.py
sampling_conf/: csp.yaml  default.yaml
scripts/: csv_to_dataset.py  evaluate.py  finetune.py  generate.py  run.py
(+814 files in other folders)
