[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "mattergen",
]

[project]
name = "mattergen"
version = "1.0"
requires-python = ">= 3.10"

dependencies = [
"matminer@git+https://github.com/hackingmaterials/matminer.git@39d93aba11c4b2ad98cc46433fedba4125373b2b",
"ase>=3.22.1",
"atomate2>=0.0.13",
"autopep8",
"bunnet==1.2.0",
"cachetools",
"contextlib2",
"custodian",
"cvxpy",
"cython",
"dill",
"e3nn>=0.5.1",
"emmet-core>=0.84.2",  # keep up-to-date together with pymatgen, atomate2
"fire", # see https://github.com/google/python-fire
"GitPython",
"hydra-core==1.3.1",
"hydra-joblib-launcher==1.1.5",
"ipywidgets",
"jobflow",
"jupyterlab>=4.2.5",
"lmdb",
"maggma",
"matplotlib==3.8.4",
"matscipy>=0.7.0",
"mattersim @ git+https://github.com/microsoft/mattersim.git",
"mongomock>=4.1.2",  # for testing, support for python 3.10 and pymongo 5 from version 4.1.2
"monty==2024.7.30 ",  # keep up-to-date together with pymatgen, atomate2
"mp-api",
"multiprocess",
"nglview",
"notebook>=7.2.2",
"numpy<2.0",  # pin numpy before breaking changes in 2.0
"omegaconf==2.3.0",
"p-tqdm>=1.4.0",  # Lower versions cause this error with python 3.10 https://github.com/swansonk14/p_tqdm/issues/43
"petname>=2.6", # for random generation of experiment name
"protobuf~=3.20",
"pyarrow",
"pydantic[email]>=2.5.1",  # pydantic already a dep, email extra allows validation of fields containing emails. Keep version up-to-date together with pymatgen, atomate2.
"pyg-lib", 
"pymatgen>=2024.6.4",
"pymatgen-analysis-alloys",  # required by emmet.core.alloys
"pymatviz==0.8.2",
"pymongo",
"pylint",
"pytest",
"pytorch-lightning==2.0.6",
"rich-click<1.8.0",
"seaborn",
"setuptools",
"SMACT",
"streamlit",
"sympy>=1.11.1",
"tensorboard",  # Required for tensorboard
"torch==2.2.1+cu118", 
"torchvision==0.17.1+cu118",
"torchaudio==2.2.1+cu118",
"torch_cluster",
"torch_geometric>=2.5",
"torch_scatter",
"torch_sparse",
"torch_spline_conv",
"tqdm",
"urllib3<2.0.0",
"wandb>=0.10.33",
]

[tool.setuptools.packages.find]
include = ["mattergen*"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
pyg-lib = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/pyg_lib-0.4.0%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch_cluster = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_cluster-1.6.3%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch_sparse = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_sparse-0.6.18%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch_spline_conv = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_spline_conv-1.2.2%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch_scatter = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_scatter-2.1.2%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


